<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Pine</string>
    <string name="search">Search</string>
    <string name="error">An error has occurred</string>
    <string name="warning">Warning</string>
    <string name="fetching">Fetching</string>
    <string name="downloading">Downloading</string>
    <string name="misc_continue">Continue</string>
    <string name="close">Close</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="emulator">Emulator</string>
    <string name="enabled">Enabled</string>
    <string name="settings">Settings</string>
    <string name="share_logs">Share Logs</string>
    <string name="refresh">Refresh</string>
    <string name="log_share_prompt">Share log file</string>
    <string name="logs_not_found">No logs were created during the last run</string>
    <string name="all">All</string>
    <string name="metadata_missing">Metadata Missing</string>
    <string name="icon">Icon</string>
    <string name="no_rom">Cannot find any ROMs</string>
    <string name="pin">Pin</string>
    <string name="play">Play</string>
    <string name="save_management">Save management</string>
    <string name="delete_save">Delete save</string>
    <string name="import_save">Import</string>
    <string name="export_save">Export</string>
    <string name="save_exported_successfully">Successfully exported save file</string>
    <string name="manage_contents">Contents</string>
    <string name="import_update">Update</string>
    <string name="import_dlcs">DLCs</string>
    <string name="importing">Importing</string>
    <string name="searching_roms">Searching for ROMs</string>
    <string name="invalid_file">Invalid file</string>
    <string name="missing_title_key">Missing title key</string>
    <string name="incomplete_prod_keys">Incomplete production keys</string>
    <string name="error_sparse_nca">Error Sparse NCA</string>
    <string name="error_compressed_nca">Error Compressed NCA</string>
    <string name="error_compressed_nca_desc">compressed NCA is not supported</string>
    <string name="pause">Pause</string>
    <string name="mute">Mute</string>
    <string name="content">Content</string>
    <string name="open_data_directory">View Internal Directory</string>
    <string name="open_data_directory_summary">Opens Pine\'s internal directory in a file manager</string>
    <string name="open_data_directory_failed">Cannot find an external file manager to open Skyline\'s internal directory</string>
    <string name="search_location">Search Locations</string>
    <string name="delete_search_location">Delete this search location</string>
    <string name="add">Add</string>
    <string name="add_search_location">Add a search location</string>
    <string name="search_locations_count">%1$s search location%2$s selected</string>
    <string name="search_location_add_success">Search location added successfully</string>
    <string name="search_location_delete_success">Search location deleted successfully</string>
    <string name="search_location_duplicated">Search location already added</string>
    <string name="keys">Keys</string>
    <string name="prod_keys">Production Keys</string>
    <string name="title_keys">Title Keys</string>
    <string name="import_keys_success">Successfully imported keys</string>
    <string name="import_keys_invalid_input_path">The path to the provided keys is invalid</string>
    <string name="import_keys_invalid_keys">The keys you tried to import are invalid</string>
    <string name="import_keys_delete_previous_failed">Failed to delete the currently installed keys</string>
    <string name="import_keys_move_failed">Failed to move the keys to the internal directory</string>
    <string name="firmware">Firmware</string>
    <string name="import_firmware_in_progress">Installing firmware</string>
    <string name="import_firmware_success">Firmware was successfully imported</string>
    <string name="import_firmware_failure">Firmware installation failed</string>
    <string name="import_firmware_invalid_contents">The supplied firmware package does not contain a valid firmware</string>
    <string name="firmware_keys_needed">Valid keys are required for firmware installation</string>
    <string name="firmware_not_installed">No firmware installed</string>
    <string name="firmware_removed">Firmware removed successfully</string>
    <string name="firmware_not_found">Firmware not found</string>
    <string name="remove_firmware_title">Remove Firmware</string>
    <string name="remove_firmware_confirmation">Are you sure you want to remove the firmware?</string>
    <string name="remove">Remove</string>
    <string name="system">System</string>
    <string name="use_docked">Use Docked Mode</string>
    <string name="handheld_enabled">The system will emulate being in handheld mode</string>
    <string name="docked_enabled">The system will emulate being in docked mode</string>
    <string name="username">Username</string>
    <string name="username_default" translatable="false">@string/app_name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="system_language">System Language</string>
    <string name="system_region">System Region</string>
    <string name="internet">The system will be able to use internet</string>
    <string name="enable_sustained_perf">Enable Sustained Performance</string>
    <string name="enable_sustained_perf_desc">may reduce thermal throttling</string>
    <string name="display">Display</string>
    <string name="perf_stats">Show Performance Statistics</string>
    <string name="perf_stats_desc_off">Performance Statistics will not be shown</string>
    <string name="perf_stats_desc_on">Performance Statistics will be shown in the top-left corner</string>
    <string name="max_refresh_rate">Use Maximum Display Refresh Rate</string>
    <string name="max_refresh_rate_enabled">Sets the display refresh rate as high as possible (Will break most games)</string>
    <string name="max_refresh_rate_disabled">Sets the display refresh rate to 60Hz</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="respect_display_cutout">Respect Display Cutout</string>
    <string name="respect_display_cutout_enabled">Do not draw UI elements in the cutout area</string>
    <string name="respect_display_cutout_disabled">Allow UI elements to be drawn in the cutout area</string>
    <string name="enable_foldable_layout">Enable Foldable Layout</string>
    <string name="enable_foldable_layout_enabled">Folded devices will display game and controller separately</string>
    <string name="enable_foldable_layout_disabled">Display controller over games even when device is folded</string>
    <string name="show_pause_button">Show Pause Button</string>
    <string name="show_pause_button_disabled">The pause button won\'t be displayed</string>
    <string name="show_pause_button_enabled">The pause button will be displayed</string>
    <string name="enable_ambient_mode">Enable Ambient Mode</string>
    <string name="enable_ambient_mode_desc">Ambient effect will be applied</string>
    <string name="anisotropic_filter">Anisotropic Filter</string>
    <string name="audio">Audio</string>
    <string name="audio_output_engine">Output engine</string>
    <string name="cpu">CPU</string>
    <string name="cpu_backend">CPU backend</string>
    <string name="enable_jit_fastmem">Enable JIT Fastmem</string>
    <string name="enable_jit_fastmem_disabled">JIT fastmem is disabled</string>
    <string name="enable_jit_fastmem_enabled"> JIT fastmem is enabled</string>
    <string name="gpu">GPU</string>
    <string name="gpu_driver_config">GPU Driver Configuration</string>
    <string name="force_triple_buffering">Force Triple Buffering</string>
    <string name="triple_buffering_enabled">Utilize at least three swapchain buffers (Higher FPS but more input lag)</string>
    <string name="triple_buffering_disabled">Utilize at least two swapchain buffers (Lower FPS but less input lag)</string>
    <string name="vsync_mode">VSync Mode</string>
    <string name="executor_slot_count_scale">Executor Slot Count Scale</string>
    <string name="executor_slot_count_scale_desc">Scale controlling the maximum number of simultaneous GPU executions (Higher may sometimes perform better but will use more RAM)</string>
    <string name="executor_flush_threshold">Executor Flush Threshold</string>
    <string name="executor_flush_threshold_desc">Controls how frequently work is flushed to the GPU</string>
    <string name="use_direct_memory_import">Use Direct Memory Import</string>
    <string name="use_direct_memory_import_desc">May alter performance and stability in some games\n<b>NOTE:</b> This option only works on proprietary Adreno drivers</string>
    <string name="force_max_gpu_clocks">Force Maximum GPU Clocks</string>
    <string name="force_max_gpu_clocks_desc">Forces the GPU to run at its maximum possible clock speed (May cause excessive heating and power usage)</string>
    <string name="free_guest_texture_memory">Free Guest Texture Memory</string>
    <string name="free_guest_texture_memory_desc">Allows guest texture data to be freed from memory when unneeded (Can rarely cause crashes)</string>
    <string name="shader_cache">Disable Shader Cache</string>
    <string name="shader_cache_disabled">Cached shaders won\'t be loaded, will cause stutters</string>
    <string name="shader_cache_enabled">Cached shaders will be loaded, can heavily reduce stuttering</string>
    <string name="enable_dynamic_resolution">Enable Dynamic Resolution</string>
    <string name="enable_dynamic_resolution_enabled">The emulator will allow the GPU to dynamically adjust the resolution based on the current load. This can help maintain performance by lowering the resolution during high-load scenarios</string>
    <string name="enable_dynamic_resolution_disabled">The emulator will report less elapsed GPU time than actually passed. This prevents the GPU from lowering the resolution, maintaining a consistent resolution regardless of load. This can result in smoother and more consistent visuals at the cost of potentially higher performance requirements</string>
    <string name="enable_sample_shading">Enable Sample Shading</string>
    <string name="enable_sample_shading_desc">May improve the quality of rendering at the cost of performance</string>
    <string name="hacks">Hacks</string>
    <string name="enable_fast_gpu_readback">Enable Fast GPU Readback</string>
    <string name="enable_fast_gpu_readback_enabled">Fast GPU readback is enabled (Will break some games but others will have higher performance)</string>
    <string name="enable_fast_gpu_readback_disabled">Fast GPU readback is disabled (Ensures highest accuracy)</string>
    <string name="enable_fast_readback_writes">Enable Fast Readback Writes</string>
    <string name="enable_fast_readback_writes_enabled">Fast readback writes are enabled</string>
    <string name="enable_fast_readback_writes_disabled">Fast readback writes are disabled</string>
    <string name="disable_subgroup_shuffle">Disable GPU Subgroup Shuffle</string>
    <string name="disable_subgroup_shuffle_enabled">Shader subgroup shuffle operations are disabled, may cause severe graphical issues</string>
    <string name="disable_subgroup_shuffle_disabled">Shader subgroup shuffle operations are enabled, ensures maximum accuracy</string>
    <string name="debug">Debug</string>
    <string name="log_level">Log Level</string>
    <string name="validation_layer">Enable Validation Layer</string>
    <string name="validation_layer_enabled">The Vulkan validation layer is enabled, major slowdowns are to be expected</string>
    <string name="validation_layer_disabled">The Vulkan validation layer is disabled</string>
</resources>